# ccdc-2026

./: README.md  gdocs-notes.txt
backup/: qauth
backup-env/: Dockerfile  create_backup_env.sh
clix/: README.md
configs/: sshd_config
configs⚙️/: README.md  motd  ssh  sshd_config  tide  tmux.conf
coolshell/: README.md  gshell.c  rickroll_v1.1.c
firewall🔥🧱/: README.md  linux_host.sh  router.sh
firewall🔥🧱/snort🐽/: README.md  adorsys_install-snort.sh  install.sh  our.rules
hardening🦾/: README.md  setup_backup-env.sh
jail/: Dockerfile  entry.sh
junk_data/: README.md  bash_rc1  bash_rc3  bash_rc4  bash_rc5  bash_rc6  clear  clear_com  redrum  redrum_com  shadow_hash  troll  troll_com
log🪵/: README.md  auditd.sh  setup_hist.sh
recon🕵️/: README.md  scan.sh
ssh_mgmt/: .gitignore  README.md  overview.md  pyproject.toml  shell.nix  wwu_logo.txt
ssh_mgmt/src/vikings_ssh/: __init__.py  app.py  cli.py  config.py  inventory.py  key_injection.py  metadata_store.py  models.py  monitoring.py  password_audit.py  render.py  snapshots.py  ssh.py
ssh_mgmt/tests/: __init__.py  test_app.py  test_inventory.py  test_metadata_store.py  test_monitoring.py  test_render.py  test_snapshots.py
ssh_mgmt/vikings_ssh/: __init__.py  __main__.py
utils🛠️/: README.md  backup_logs.sh  backup_remote.sh  run_all.sh
windows🪟/: AD-Hardening.ps1  README.md  WindowsManualMonitor.ps1  break_glass.ps1  optimal_security_preset.ps1  remove_descriptions.ps1  shield_n_restore.ps1  winrm_disable.ps1  winrm_enable.ps1
