[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vikings-ssh"
version = "0.1.0"
description = "Initial WWU vi_kings SSH management scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["paramiko>=3.0"]

[project.scripts]
vikings-ssh = "vikings_ssh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

